--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 table {
-    background-color: #E5E5E5;
+    background-color: #E5E5E7;
     padding: 20px;
     width: 100%;
     border: thin;
@@ -16,6 +16,8 @@ table {
     background-color: ghostwhite;
     margin: 30px;
     padding: 30px;
+    min-width: 400px;
+    max-width: 900px;
 }
 
 /* unvisited link */
